@@ -1076,7 +1076,9 @@ clientBuildRangeHeader(clientHttpRequest * http, HttpReply * rep)
 {
     HttpHeader *hdr = rep ? &rep->header : 0;
     const char *range_err = NULL;
-    assert(http->request->range);
+    request_t *request = http->request;
+    int is_hit = isTcpHit(http->log_type);
+    assert(request->range);
     /* check if we still want to do ranges */
     if (!rep)
 	range_err = "no [parse-able] reply";
@@ -1094,6 +1096,11 @@ clientBuildRangeHeader(clientHttpRequest * http, HttpReply * rep)
 	range_err = "canonization failed";
     else if (httpHdrRangeIsComplex(http->request->range))
 	range_err = "too complex range header";
+    else if (!request->flags.cachable) /* from we_do_ranges in http.c */
+	range_err = "non-cachable request";
+    else if (!is_hit && Config.rangeOffsetLimit < httpHdrRangeFirstOffset(request->range)
+	    && Config.rangeOffsetLimit != -1) /* from we_do_ranges in http.c */
+	range_err = "range outside range_offset_limit";
     /* get rid of our range specs on error */
     if (range_err) {
 	debug(33, 3) ("clientBuildRangeHeader: will not do ranges: %s.\n", range_err);
